# rest/java/webflux/src/main/java/m4gshm/benchmark/rest/spring/boot/TaskRestSpringWebflux.java
@@ -2,11 +2,10 @@ package m4gshm.benchmark.rest.spring.boot;
 
 
 import lombok.RequiredArgsConstructor;
-import m4gshm.benchmark.storage.MemoryStorageConfiguration;
+import m4gshm.benchmark.storage.MemoryStorage;
 import m4gshm.benchmark.storage.Storage;
 import m4gshm.benchmark.storage.Task;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -26,7 +25,6 @@ import static reactor.core.publisher.Mono.error;
 import static reactor.core.publisher.Mono.fromCallable;
 
 @SpringBootApplication
-@Import(MemoryStorageConfiguration.class)
 @EnableWebFlux
 @RestController
 @RequestMapping(ROOT_PATH_TASK)
@@ -34,7 +32,8 @@ import static reactor.core.publisher.Mono.fromCallable;
 public class TaskRestSpringWebflux implements ReactiveTaskAPI {
     private static final Mono<Task> NOT_FOUND = error(new ResponseStatusException(HttpStatus.NOT_FOUND));
     private static final Status OK = new Status(true);
-    private final Storage<Task, String> storage;
+    private final Storage<Task, String> storage = new MemoryStorage<>(1024,
+            Runtime.getRuntime().availableProcessors());
 
     public static void main(String[] args) {
         run(TaskRestSpringWebflux.class, args);
